--- a/css/index.css
+++ b/css/index.css
@@ -165,6 +165,7 @@ main .content-wrap h3 {
 }
 
 #project .content ol .history p:hover {
+    cursor: pointer;
     background-color: rgba(45,170,219,.3);    
     color: darkblue;
     font-weight: 700;
