프로젝트영역 세부설명 카드 추가

--- a/css/index.css
+++ b/css/index.css
@@ -138,11 +138,33 @@ main .content-wrap h3 {
     text-decoration: underline;
 }
 
+#project {
+    font-family: 'Noto Sans KR', 'Nanum Gothic', sans-serif;
+}
+
+#project .content ol {
+    display: flex;
+}
+
 #project .content ol .card {
+    overflow: hidden;
     width: 340px;
     height: 480px;
     box-shadow: 0px 5px 15px 0px rgb(153 153 153 / 50%);
     border-radius: 4px;
+}
+
+#project .content ol .card:first-child {
+    margin-right: 20px;
+}
+
+#project .content ol .card:nth-child(2) {
+    display: none;    
+}
+
+#project .content ol .card:nth-child(2) p {
+    margin: 8px;
+    line-height: 1.6rem;
 }
 
 #project .content ol .thumbnail img {
@@ -166,37 +188,39 @@ main .content-wrap h3 {
 
 #project .content ol .history p:hover {
     cursor: pointer;
-    background-color: rgba(45,170,219,.3);    
+    background-color: rgba(45, 170, 219, .3);
     color: darkblue;
     font-weight: 700;
 }
 
-#project .content ol .history .category ul {
+#project .content ol .history .work-category {
+    margin: 16px 0;
+}
+
+#project .content ol .history .work-category ul {
     display: flex;
     flex-wrap: wrap;
 }
 
-#project .content ol .history .category li {
+#project .content ol .history .work-category li {
     margin-left: 8px;
     font-size: 12px;
     color: #444;
-    border: none;    
+    border: none;
     padding: 2px;
-    border-radius: 4px;    
+    border-radius: 4px;
     background-color: rgba(0, 120, 223, 0.2);
 }
 
-#project .content ol .history .category li:nth-child(3),
-#project .content ol .history .category li:nth-child(4),
-#project .content ol .history .category li:nth-child(5){
+#project .content ol .history .work-category li:nth-child(3), #project .content ol .history .work-category li:nth-child(4), #project .content ol .history .work-category li:nth-child(5) {
     background-color: rgba(221, 0, 129, 0.2);
 }
 
-#project .content ol .history .category li:nth-child(6){
+#project .content ol .history .work-category li:nth-child(6) {
     background-color: rgba(103, 36, 222, 0.2);
 }
 
-#project .content ol .history .category li:nth-child(7) {
+#project .content ol .history .work-category li:nth-child(7) {
     background-color: (233, 168, 0, 0.2);
 }
 
