모바일 메뉴 버튼 숨김 처리

--- a/css/index.css
+++ b/css/index.css
@@ -306,7 +306,7 @@ footer {
     }
 
     .header-wrap .menu {
-        display: block;
+        /* display: block; */
     }
 
     #profile .content {
